[package]
name = "agnir_modding_api"
version = "0.1.0"
authors = ["Thomas \"nwmqpa\" Nicollet <thomas.nicolleŧ@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { verions = "0.15.0", features = ["nightly"] }
libloading = "0.5"