[package]
name = "agnir_modding_api"
version = "0.1.0"
authors = ["Thomas \"nwmqpa\" Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5"

[[example]]
name = "loading"
path = "examples/main.rs"